@@ -1244,6 +1244,18 @@
                     break;
             }
 
+            function apply_visual(el, visual) {
+                ['muted', 'success', 'warning', 'danger'].forEach(
+                    function(name) {
+                        var klass = name == 'muted' ? 'text-muted' : name;
+                        if (name == visual) {
+                            el.addClass(klass);
+                        } else {
+                            el.removeClass(klass);
+                        }
+                    });
+            }
+
             if (this._drawed_record !== this.record.identity) {
                 for (var i = 0; i < this.tree.columns.length; i++) {
                     var column = this.tree.columns[i];
@@ -1281,6 +1293,8 @@
                             }
                         }
                     }
+                    apply_visual(
+                        td, this.record.expr_eval(column.attributes.visual));
                     if ((column.header.is(':hidden') && thead_visible) ||
                         column.header.css('display') == 'none') {
                         td.hide();
@@ -1325,6 +1339,8 @@
                     update_expander();
                 }
             }
+            apply_visual(
+                this.el, this.record.expr_eval(this.tree.attributes.visual));
             if (this.record.deleted || this.record.removed) {
                 this.el.css('text-decoration', 'line-through');
             } else {
